# ziguiRL

./: .gitignore  ckpt_Hopper-v2_exmaple  deepnetwork.py  distribution.py  main.py  model.py  policy.py  replaybuffer.py  statemodifier.py
PDC/: CMakeLists.txt  PDC.cpp
bipedenv/: MotionParser.cpp  MotionParser.h  SkeletonBuilder.cpp  biped.cpp  biped.py
character/: humanoid.xml  humanoid3.xml  humanoid_new.xml
customenv/: CMakeLists.txt  customgym.py  multipendulum.cpp  multipendulum.py  toycgym.cpp  toycgym.py
motion_data/: jog_roll.bvh  run.bvh  stop_walk.bvh
mybiped/: CMakeLists.txt  Functions.h  MotionParser.cpp  MotionParser.h  biped.cpp  biped.py
solution_model/: Hopper-v2  Hopper-v2-128x128  Hopper-v2-64x64  MultiPendulum
tests/tutorial_biped/: CMakeLists.txt  CharacterConfigurations.h  Functions.cpp  MotionParser.cpp  MotionParser.h  main.cpp
